# ErdosQuantBootcamp

./: .gitignore  README.md  config.toml  data_update.py  mini_project_3.ipynb  mini_project_4.ipynb  pyproject.toml
Erdos_Miniprojects/: Mini_Project_1.ipynb  mini_project_1.ipynb  mini_project_2.ipynb  mini_project_3.ipynb  mini_project_4.ipynb
data/: market_data.parquet
src/: __init__.py  agent.py  backtest.py  backtester.py  blackscholes.py  utils.py
