[project]
name = "erdosquantbootcamp"
version = "0.1.0"
description = ""
authors = [
    {name = "Tianhao Wang",email = "tianhw11@uci.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yfinance (>=0.2.63,<0.3.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "notebook (>=7.4.3,<8.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "openai (>=1.88.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
